base/kube-ops-view/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-ops-view
  labels:
    app: kube-ops-view
spec:
  replicas: 4
  selector:
    matchLabels:
      app: kube-ops-view
  template:
    metadata:
      labels:
        app: kube-ops-view
    spec:
      serviceAccountName: kube-ops-view
      containers:
        - name: kube-ops-view
          image: hjacobs/kube-ops-view:latest
          ports:
            - containerPort: 8080
