base/kube-ops-view/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-ops-view
  labels:
    app: kube-ops-view
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: kube-ops-view
