base/kube-ops-view/kube-ops-view-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ops-view-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: kube-ops-view
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:061039804626:certificate/6beca310-1a10-4262-848e-119061924427
    external-dns.alpha.kubernetes.io/hostname: ops.match-fit.store
    
spec:
  ingressClassName: alb
  rules:
    - host: ops.match-fit.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-ops-view
                port:
                  number: 80
